test/classes/initializers/initeq-on-class.good
initeq-on-class.chpl:3: error: init= may not be defined on class types
