test/classes/initializers/initeq-on-class.chpl
class C {
  var x: int;
  proc init=(other) {
  }
}

proc main() {
  var x = new C();
  var y = x;
}
